
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "latex_parser"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
latex2mathml = {git = "https://github.com/Mr-ZeMoreno/latex2mathml/", branch = "master"}

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
